--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,37 +1,12 @@
 ---
-title: 中共速度
+title: 我们需要与乌克兰人民站在一起
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2114512/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2114696/)
 
-作者：纽约香草山教育部-蓝之灵（hortênsia)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-中共速度捂嘴快
-真相真相不许传
-封网禁言莫转载
-喝茶警察上门来
-莫须有罪名按的快
-铁链铁笼关起来
-关起来
-没人权
-律师道义都掩埋
-真话真话不许谈
-封网禁言捂嘴快
-中共速度人人赞
-只有粉红嗨起来
+03/01/2022 国会议员罗·卡纳在接受玛丽亚采访时说：普京的所作所为大逆不道，都是潜在的战争罪，需要被调查。我们需要与乌克兰人民站在一起。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image0-10.jpg)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
-审核/编辑/发稿:qiutian（邱甜）
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1.png)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
