--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,37 +1,36 @@
 ---
-title: 乌克兰救援03.05 如何报名参与新中国联邦乌克兰大救援？
+title: 弗吉尼亚州提出突破性的数字货币银行法案
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2114319/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2114612/)
 
-撰稿：文字烧
-![](https://assets.gnews.org/wp-content/uploads/2022/03/的的Picture1.png)
-新中国联邦、法治基金乌克兰救援特别行动3月5日报道，乌克兰大救援正在紧张进行中，很多看了现场直播的战友也想参与到救援行动中，那如何报名以及需要哪些条件呢？
+作者：银河系农场 – 骄子
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月28日，弗吉尼亚州参议院通过了一项突破性的数字货币银行法案，这项法案允许那些有健全的协议来有效管理相关风险的银行，提供数字货币托管服务。
 
-**目前还需要50名以上的战友，所需条件是**：
+![](https://assets.gnews.org/wp-content/uploads/2022/03/11-16.png)
 
-1. 必须要有两周的时间可以待在前线；
-2. 一定要有入境波兰的签证、护照或者许可证；
-3. 特别需要会俄语、乌克兰语、德语、波兰语的战友。
+目前，因世界各国政府试图阻止俄罗斯使用数字货币来绕过制裁，导致数字货币的价格持续走高。该法案的提案人说，数字货币的托管服务是应该在立法上给予解决的，通过赋予国家特许银行某些能力，使其成为数字货币托管人，允许该银行持有私人加密货币钱包的钥匙，类似个人在银行拥有保险箱。
 
+数字货币正在不断普及，鉴于其巨大的经济发展潜力，只有立法才是更持久的解决方案。此前，美国联邦银行监管机构表示，将在2022年澄清数字货币银行规则。
 
-**报名方式：**
+链接：
 
-扫直播中的二维码填表报名，或填下表报名：
-
-[https://docs.google.com/forms/d/e/1FAIpQLSfOtBItSadegaI7sYL-SzAmuzVCbmr3HC7oiDqKD06auVxRhw/viewform](https://docs.google.com/forms/d/e/1FAIpQLSfOtBItSadegaI7sYL-SzAmuzVCbmr3HC7oiDqKD06auVxRhw/viewform)
-
-温馨提示：
-
-1. 后台客服只会回复表格上符合条件的战友，如果没有回复，说明不符合条件。我们会根据您的情况评估到了当地是否有安全保障。
-2. 报了名却没有办法去的战友，可以在后方继续做物资供给、协调、文宣等维持农场正常运营的工作，大家都有力可出，有地方可以使劲。
-3. 请不要给前线的战友发私信报名，不管是前方的大卫哥，还是在后方做总调配的长岛哥，他们都没有时间处理私信。
-4. 我们不是去旅游，我们是去参加一场救人的战役，如果被选上，一定要作好心理准备。
+- [Virginia advances groundbreaking cryptocurrency banking bill](https://www.foxbusiness.com/politics/virginia-groundbreaking-cryptocurrency-bill)
 
 
-直播链接: [https://gettr.com/post/py8k3mecdc](https://gettr.com/post/py8k3mecdc)
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-21.jpg)
 
-校对发布：Shifter
+总编/编辑: 飞虹
+审核: 飞虹
+校正/发稿：海阔天空1
 
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
