--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,34 +1,18 @@
 ---
-title: 新中国联邦人乌克兰战区人道救援首战告捷
+title: 泽连斯基现象
 ---
-`cindy` [轉載自GNews](https://gnews.org/zh-hans/2114201/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2114570/)
 
-撰稿：澳喜cindy
+撰稿—爱战神
+校对/上传—无明逆流
 
-俄乌战争已经第十天了，双方两次谈判均无果。俄军人数比乌军多5-10倍，并用导弹狂轰滥炸，快速向各大城市进军，核发电厂被炮弹击中起火。形势相当严峻。
+2022年3月2日文贵先生在大直播首次提到，乌克兰总统“泽连斯基现象”。什么叫“泽连斯基”现象？文贵先生高度赞扬了泽连斯基，称他由平民总统，转变成一个伟大的总统，没有政客们的一副嘴脸，耍奸阴毒，属于政治小白，清廉干净，没有利益勾兑，是个穷人。他能够当上总统，完全是乌克兰人民看透了政客一贯的的虚伪贪婪，而选了一个擅长幽默的演员做了总统。事实证明，乌克兰人民没有选错，俄入侵一开始就无良媒体造谣，说泽连斯基携全家逃了，扔下乌克兰人民跑路了。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/W9-PM.jpeg)图片来源：网络
+文贵先生说：面对强大的俄罗斯入侵，泽连斯基总统呼吁全国人民英勇抵抗，召唤在海外的所有乌克兰人帮助自己的祖国。没有抱怨、没有谩骂、没有中共的动不动就谴责西方国家。而是博取世界同情，录制了大量视频，战争惨烈的场面、小女孩们哭泣的歌唱、人民流离失所……效果非常好，爱好和平的国家和个人纷纷支持！世界几乎一边倒的选择站在正义的乌克兰这边，大量的先进武器源源不断地送来，个人组成志愿军奔赴乌克兰战场……
 
-乌克兰总统再三喊话普京：“坐下来面谈，我不咬人，你怕什么？”“普京到底要什么”？
-
-乌克兰总统在新闻发布会上说：“俄军随身带来了焚尸炉 ，世界末日已经到来”。
-
-这确实是够惊悚的。猜测：这可能是普京已经预估到将有大批士兵死亡，将来怎么向国内的百姓交代呢？这种消尸灭迹，数据可以篡改，死无对证。
-
-我们看到很多自媒体的视频，采访被俘的俄国士兵：你们知道为什么要打乌克兰吗？他们都说根本不知道，上级告诉他们只是军演。看来这场战争真的只是普京自己需要的战争。
-
-乌克兰总统惊呼：现在已经是世界末日了！
-
-鉴于乌克兰局势日益恶化，新中国联邦来自英国、美国、瑞士、加拿大等国家的战友们，几天来不顾自己安危，不辞劳苦，忘我的奔赴战区，准备救人所需的繁杂的事务。昨天成功地从乌克兰轰鸣的炮火中救出了70个乌克兰战区的孩子、母亲和一些中国同胞。乘坐的大巴历经15个小时到达了乌克兰的邻国波兰避难场所。在那里为被救人员筹备物资和生活用品的战友们，连续多日没有休息好，大巴车抵达时，第一时间送上了各种食物和水。并且还安排好了安全的住宿等待飞往各个国家，期间将提供30天以内的免费食宿。
-
-波兰这位热舒夫市长的善良的忠告：“希望中共国站出来反对这场战争”。“不要站在边上看着”。
-
-中共何止是不反对普京发动的这场战争，习近平就是普京的坚强后盾。
-
-接下来，新中国联邦将已安排好的营救专机747、757、大力神运输机，协助华人同胞、美国及其他各国友人免费撤离，目的地为美国和其他安全中转国。作为新中国联邦的一员我们深为有这样的无私无畏的战友们而自豪，没有文贵先生的智慧和决策和非常好的信誉，各个复杂的环节可能很难在如此短的时间里做到这么完美。看了整个过程， 真的让人感动。被救的人素不相识，甚至连彼此的姓名都不知道，只是为了救人一命。这是新中国人的伟大壮举！可赞可颂！
-
-*编辑：cindy*
-
-【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
-【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
+由此，文贵先生说：谁都可以当总统，只要有能力，不分所谓的贵贱、地位。世界需要没有政治经验，小白出身的人当国家的精神领袖，这就是“泽连斯基”现象！
+文贵先生再次宣告世人：我不参政，我不想当总统，但是我要用在新中国联邦的影响力，推动中国人一人一票，最终实现中国民主自由，这是我一生的使命！
+但愿“泽连斯基”现象不久出现在我们中国，出现在全世界！越来越多的平民精神领袖管理国家，世界和谐相处，没有战争，只有和平！
 
  
 
