--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,41 +1,49 @@
 ---
-title: 德国教练到盘古现场发现龙头变龟头没完工而且缺两睾丸
+title: Ammo公司向乌克兰武装部队捐赠100万发AK-47 a 762弹药
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114557/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/2114728/)
 
-Youtube视频链接：[https://youtu.be/CjLF-0DD09k](https://youtu.be/CjLF-0DD09k)
+作者：加拿大温哥华扬帆农场 动物农庄里的小蚂蚁[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)（专栏） Gettr: [@Michael\_tonny89](https://gettr.com/user/michael_tonny89)
 
-**郭文贵先生：**你要看到七哥过去七年来所向披靡，共产党上万次的警察，把龙头在奥运会前变成了龟头。德国那个教练说：“Miles，我真的到现场我认真看了，他说那有男性龟头，有没有睾丸呐？”把我笑晕了，我还真没想过这个问题。我说：“你得问习近平‘习太阳‘去，有没有睾丸？”白素贞你问问勺子星为什么没搞两个睾丸。（呵呵呵呵，嘉宾们都笑了）
+![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
 
-我说这哥们太搞笑了，你想象力太强了。我说德国人你只知道潜水艇，哪出来睾丸呐。把我笑得快笑晕了。他说：“我就在这前面看着，真的就把这个龙头……..”他说“2008年的时候我来了，我就站在同样的位置”他说“这个世界全变了。冠状病毒、疫苗”他说“整个奥运村那块就像死气沉沉，没人”他说“那有人呐，除了军人就是军人。世界都是死静一片”
+8天前，美国准备帮助乌克兰总统泽连斯基离开基辅，以免被入侵的俄罗斯军队俘虏或杀害，然而，泽连斯基拒绝离开他的国家。泽连斯基说，战斗就在这里，他需要反坦克的弹药，而不是逃跑的飞机。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/FMfarZbaAAI_QyO.jpg)
+正所谓得到多助，失道寡助，泽连斯基的勇敢和呼吁，乌克兰人民面对凶猛的外敌入侵表现出来的勇气，很快得到了回应。
 
-他说：“但是你那“龙头”变成‘龟头’“他说“确实是龟头。”他说“包扎的龟头。”他还发现那龟头上头有一层没完，我都不知道，你们都没发现这个问题。他说：“没完啊，Miles，还有一层……那是拿那个粘上去的东西。”我说：“是吗？”就是工没完，它那个龟头包扎还没完呢。他说：“那个Miles，那个睾丸在哪呢？得弄两睾丸。”我说：“是呀，我说再弄两个有保护神。”这两睾丸都成了…..，上哪弄两睾丸去呀。文疯而动弄两睾丸去吧。
+2月28日，美国军火制造商Ammo公司（[AMMO, INC](https://ammoinc.com/)）宣布，向乌克兰武装部队捐赠100万发弹药，以支持他们为自由而战。Ammo公司首席执行官Fred Wagenhals说，“Ammo Inc.，我们作为美国人坚定地支持乌克兰的主权和独立，因为我们在任何地方都支持自由和民主。虽然我们热切希望迅速和平地解决危机，外交终将赢得胜利，但我们谴责俄罗斯的侵略及其对乌克兰领土完整和自由的威胁。我们认识到乌克兰当地局势正在迅速发展，我们准备尽快采取行动支持乌克兰，因为它继续捍卫自己和自由。”
 
-编辑整理：Jacques；
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Snipaste_2022-03-06_18-50-03.png)
 
-字幕文件制作：兵嫂；
+Ammo公司，总部位于美国亚利桑那州斯科茨代尔（SCOTTSDALE,Ariz.），纳斯达克股票代码：POWW，是世界领先的高性能弹药和零部件垂直整合生产商和全球最大的枪支和射击运动行业在线市场GunBroker.com的运营商。
 
-视频制作及上传：Cindy；
+AMMO公司成立于2016年，其愿景是改变、创新和振兴自满的军火行业。AMMO公司设计和制造适用于各种场合的产品，包括执法、军事、运动射击和自卫。AMMO公司推广品牌为STREAK™的视觉弹药、stelTH™亚音速弹药和军用穿甲弹。
 
-G-News发布：小满；
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Snipaste_2022-03-06_18-51-18.png)
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+3月2日上午6:50 MST，AMMO公司董事会成员和NASCAR传奇车手Richard Childress出现在“Fox&Friends”上，讨论AMMO最近为支持争取自由的乌克兰军队而向乌克兰武装部队捐赠的提议。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Snipaste_2022-03-06_18-53-25.png)
+3月4日，AMMO公司宣布，公司最近向乌克兰武装部队的捐赠提议，收到了来自股东、客户、供应商和合作伙伴的热烈响应，他们支持AMMO公司的捐赠提议，以帮助乌克兰武装部队争取自由。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+公司董事长兼首席执行官Fred Wagenhals感谢每个人的慷慨和愿意提供额外的财政支持来补充AMMO公司的努力，AMMO公司管理团队正在夜以继日地工作，以确保弹药迅速交付给乌克兰适当各方所涉及的后勤和法律复杂性。
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+据FOX NEWS报道，AMMO公司向乌克兰捐赠的是100万发AK-47 a 762弹药，可以装备33,000支枪支。
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+参考资料：
 
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+[Company with Manitowoc ties to donate ammunition to Ukraine army](https://fox11online.com/news/nation-world/company-with-manitowoc-ties-to-donate-ammunition-to-ukraine-armyy)
 
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+[AMMO, INC](https://ammoinc.com/)
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+[AMMO, INC. BOARD MEMBER AND NASCAR RACING LEGEND RICHARD CHILDRESS APPEARED ON ‘FOX & FRIENDS’ TO DISCUSS AMMO’S OFFER TO UKRAINE](https://ammoinc.com/2022/03/02/ammo-inc-board-member-and-nascar-racing-legend-richard-childress-appeared-on-fox-friends-to-discuss-ammos-offer-to-ukraine/)
 
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+[ASCAR legend Richard Childress donating ammunition to Ukraine](https://video.foxnews.com/v/6299394753001?playlist_id=930909787001#sp=show-clips)
 
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+[AMMO, Inc. Announces Overwhelming Response to Recent Donation Offer to Ukrainian Armed Forces](https://www.youtube.com/watch?v=hr4ceDGtPz4)
+
+[AMMO, INC. ANNOUNCES OVERWHELMING RESPONSE TO RECENT DONATION OFFER TO UKRAINIAN ARMED FORCES – DIRECTIONS TO DONATE AND SUPPORT AMMO’S CHARITABLE EFFORTS](https://ammoinc.com/2022/03/04/ammo-inc-announces-overwhelming-response-to-recent-donation-offer-to-ukrainian-armed-forces-directions-to-donate-and-support-ammos-charitable-efforts/)
+
+编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
 
  
 
