--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,16 +1,26 @@
 ---
-title: 墙内闹剧：民主不民主实践最有说服力，人民最有发言权
+title: 因宜家宣布退出俄罗斯 其当地门店涌现购物潮
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2114535/)
+`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2114711/)
 
-撰稿—水滴石穿
-校对/上传—无明逆流
+**撰稿：日本东京方舟农场 Miyali7768****(****文玉) 幽蘭自得**
 
-中共国十三届全国人大五次会议大会发言人张业遂说，全过程人民民主有两个关键词：一个是“人民民主”，一个是“全过程”。中共国发展全过程人民民主不仅有完整的制度程序，而且有完整的参与实践。一个国家民主不民主，实践最有说服力，这个国家的人民最有发言权。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/122.jpeg)图片来源：sohu
-我的分析是：这发言人简直就是胡说八道，墙内的网络言论有严格的文字审查，稍有不慎就封号。中共国没有民主，能发言的是权贵、选举走过场、人选组织上早已经内定。昨天叫你只能生一个娃，今天就叫你生三个娃，“人民”这个词不过是中共当局用来掩人耳目的幌子罢了，还拿这个宣传，世界都笑掉了大牙，中共国最没有民主了，那里只有独裁、只有权力的世袭和傲慢！
+近日，由于著名瑞典公司“宜家家居”（IKEA）宣布退出俄罗斯市场，其当地门店出现了购物潮。
 
-文章来源：[民主不民主实践最有说服力，人民最有发言权](https://www.sohu.com/a/527271742_429139?editor=%E9%AB%98%E5%AF%92%20UN973&amp;scm=1104.0.0.0&amp;code=5aa62df30901ef434eb09ab8e22186e9&amp;spm=smpc.home.top-news1.16.1646405636533rmvsVc6&amp;_f=index_cpc_8)
+![](https://assets.gnews.org/wp-content/uploads/2022/03/0124.jpg)（图片来自美联社）
+
+据《中央社》报道，瑞典连锁家具家饰零售商宜家家居（IKEA）已宣布将退出俄罗斯市场，而俄罗斯首都莫斯科附近一个门店本周涌现排队人潮，其他各地门店也出现类似景象，俄罗斯家庭赶来将手上迅速贬值的卢布购买家用品。
+
+据悉，西方制裁使得俄罗斯央行的6400亿美元外汇存底大部分遭到冻结，若干俄罗斯银行被排除在全球支付系统SWIFT之外，导致卢布汇价本周贬值高达1/3。
+
+此外，欧亚集团（Eurasia Group）分析师威特林（Zach Witlin）指出，制裁已透过物价上涨和数字支付中断冲击俄罗斯消费者。虽然他们并非是制裁直接目标，但“恐惧和谨慎使冲击放大”宜家等国际品牌退出俄国，正掀起“滚雪球效应”。
+
+参考链接：
+[https://www.cna.com.tw/news/aopl/202203050241.aspx](https://www.cna.com.tw/news/aopl/202203050241.aspx)
+
+素材采编：Miyali7768(文玉) 幽蘭自得
+编辑：青城道姑
+发布：Linda
 
  
 
