--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,50 +1,21 @@
 ---
-title: 英超赛场球员心脏病不断，新冠疫苗罪魁祸首
+title: 谈古论今 &#124; 辉瑞被判公布毒疫苗数据梗概
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2114505/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2114659/)
 
-#### 【雅典娜观察】和你一起洞察世界
+撰稿：东京樱花团/谈古论今
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-512.png)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic.reuters.com%2Fresources%2Fr%2F%3Fm%3D02%26d%3D20201119%26t%3D2%26i%3D1541703733%26r%3DLYNXMPEGAI02T%26w%3D800&amp;imgrefurl=https%3A%2F%2Fwww.reuters.com%2Farticle%2Fpfizer-covid-vaccine-delivery-1119-idCNKBS27Z064&amp;tbnid=qHmvHy0WdAtfeM&amp;vet=12ahUKEwisoPrSmbH2AhUMBMAKHYbuDFMQMygAegUIARCCAQ..i&amp;docid=QN8Djec53_t6kM&amp;w=800&amp;h=537&amp;q=%E8%BE%89%E7%91%9E&amp;ved=2ahUKEwisoPrSmbH2AhUMBMAKHYbuDFMQMygAegUIARCCAQ)
+一个由公共卫生和医疗专业人员成立的非盈利组织PHMPT（Public Health and Medical Professionals for Transparency）作为原告，于2021年9月向美国得克萨斯州北部地区法院提告了美国食品和药物管理局（FDA），诉讼内容是：要求FDA公开对于辉瑞新冠病毒疫苗安全审查的相关数据。但FDA表示公开信息需要55年的时间。PHMPT反驳说，55年后制造、批准和接种疫苗的当事人恐怕都死了，岂不死无对证了吗？
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-513.png)
+此案，德州地区法院审理顺利，判FDA败诉，责令FDA必须从2022年3月1日开始，发布对于辉瑞公司（Pfizer）的COVID-19疫苗“安全有效”相关的审查文件。当然，FDA会公布什么文件尚无法知晓，但是如果FDA避重就轻、造假、销毁任何文件的话，法律的严惩是逃不脱的。
 
-翻译/编辑：文泓
+现在，仅就一份有关“辉瑞疫苗不良反应”的9页报告足以令全世界的人震惊！因为报告中列出了1000多种疫苗不良反应！辉瑞疫苗试验研究阶段有46,000人参加了人体测试，竟然有高达42,000人有不良反应，占比93%。其中，死亡达1229人，占比2.6%。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/03/7-19.png)图片来源：SportTbible & 雅典娜设计组
+根据FDA的安全审查标准：试验药物后30天内只要有一例致死，人体实验必须终止。而辉瑞疫苗在临床试验阶段造成了1200例死亡，FDA竟然批准了辉瑞疫苗上市。这就揭开了全世界各国政府在强迫民众接种疫苗时强制签署免责合约的谜底。那么，生产毒疫苗的辉瑞公司、监管审批的美国食品和药物管理局、各国政府、病毒以及医学疫苗相关的知情的科学家们、被寡头控制的世界各大媒体、被大型科技公司控制的社交平台等等，在这个辉瑞疫苗惊天大案中各自扮演了什么角色？将承担怎样的法律责任？拭目以待！
 
-
-据报道，在英超联赛频发的球员因心脏问题倒地，可能是接种新冠疫苗导致的后果。
-
-最近发生了一些引人注目的事件，涉及球员在场上心脏忍受问题——包括在欧洲锦标赛上因心脏骤停而倒下的**克里斯蒂安****·****埃里克森**和在被诊断出患有心律失常后被迫退役的**塞尔吉奥****·****阿圭罗**。
-
-【备注：埃里克森是现役丹麦国家队球员，1992年2月14日出生，场上司职中场，现效力于英格兰的布伦特福德足球俱乐部，曾加盟阿贾克斯、托特纳姆热刺、国际米兰足球俱乐部；阿奎罗是前阿根廷国家队球员，1988年6月2日出生，司职中锋，曾加盟马德里竞技、曼城、巴塞罗那足球俱乐部，去年12月15日因心脏问题而退役。】
-
-足球比赛中与心脏相关的事件令人担忧，引发了人们对预防新冠病毒疫苗接种计划的怀疑。
-
-正如多家媒体报道的那样，最近的事件让一些英超球员更加怀疑心脏病与新冠疫苗之间存在内在联系。
-
-据《快报》报道，南安普顿传奇人物勒蒂西耶在接受采访时呼吁，政府调查新冠疫苗是否是导致越来越多的足球运动员患有心脏病的原因。
-
-他说：“**在我的职业生涯中，我从未见过任何足球运动员因为心脏问题而离开球场，现在的状况让我感到非常担忧**。”
-
-“**如果有人能看到体育界正在发生的事情，并说所有这些人在足球比赛、板球比赛、篮球比赛中出现心脏问题是正常的**……我很抱歉，那些遭受痛苦的球员数量正在极度增加。”
-
-本周早些时候，英超联赛证实84%的球员正在“接种疫苗”——这意味着他们至少接种了一剂疫苗。
-
-77%的英超球员已经接种了两剂新冠疫苗，并被归类为完全接种疫苗。
-
-这个数字表明，大约100名球员还没有接受第一剂疫苗。
-
-本赛季欧洲各地还发生了许多其他令人担忧的事件，涉及球员、甚至球迷也发生心脏问题。
-
-参考链接： [Premier League: On-field heart issues ‘have fuelled suspicion of Covid vaccines’ among players | Daily Mail Online](https://www.dailymail.co.uk/sport/sportsnews/article-10339755/Premier-League-field-heart-issues-fuelled-suspicion-Covid-vaccines-players.html)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
