--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,32 +1,36 @@
 ---
-title: 克里姆林宫的私人飞机前往华盛顿是要接回被驱逐的俄罗斯外交官？
+title: 波兰将扩军一倍防范俄罗斯入侵
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114350/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2114615/)
 
-翻译：Steven Hu
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3-29.jpg)
-图片来源：谷歌图片
+作者：纽约磐石农场 – 在远方
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+台湾媒体3月5日消息，为避免乌克兰遭受俄罗斯侵略的前车之鉴，北约成员国波兰近日宣布，准备修改法律提高明年的军费开支，把陆军人数从14万3500人，扩增到30万人，以提高防御能力。
 
-《零对冲》一架俄罗斯政府喷气式飞机已经离开圣彼得堡，正在飞往华盛顿的途中，这是美国东海岸居民周六凌晨醒来时听到的令他们惊讶的消息。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/8-9.jpg)
 
-社交媒体上议论炸了锅——一些人最初想知道：这是否是俄罗斯总统普京要与拜登总统进行特别一轮谈判？
+波兰政府表示，因为俄乌战争，该国政府已经把注意力集中在首都华沙的防御能力上，预计明年将把军费从去年10月提案的占GDP的2.5%，提高到3%，并将视情况继续增加。如果修法顺利通过，波兰将拥有法律依据，来建设北约最强大的陆军之一。
 
-不幸的是，这些怀疑被证明是不正确的，实际上几乎是不现实的。美国国务院发表声明，确认这架飞机将接走因入侵乌克兰而被联合国驱逐出境的俄罗斯外交官。 国务院将被逮捕的雇员描述为“俄罗斯情报人员”。 俄罗斯外交部在发布给 电报（Telegram ）的一份声明中证实，这架飞机是去接载被驱逐的俄罗斯外交官。
+波兰国防部长拉查克指出，波兰需要这样一支军队保卫祖国，尤其是当前邪恶的帝国正在东部边境重生之时。
 
-预计该航班将在下午某个时间降落在杜勒斯国际机场。
+链接：
 
-截至周六东部时间 1030 点，伊留申 Il-96-300（在俄罗斯国家运输公司/俄罗斯特种飞行中队注册为 RA-96019）向西飞行，目的地为纽约市。 根据飞行地图，这是它最近一次沿格陵兰附近飞行。
+- [波蘭被俄國入侵烏克蘭嚇到 將擴軍一倍「成為北約最強陸軍」](https://news.ltn.com.tw/news/world/breakingnews/3849139)
 
-俄罗斯周二将这一驱逐在纽约联合国工作的外交官行为定义为“升级”。 别忘了，即使是伊朗和朝鲜外交官也被允许毫发无损地往返于联合国。
 
-飞行数据显示，俄罗斯总统弗拉基米尔·普京本人并不常用这架喷气式飞机。 指出普京常用的应该是两架编号157715 或 157716的飞机。而事实上，目前正在飞行的 Ilyushin Il-96-300 确实经常从克里姆林宫起飞的飞机。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-21.jpg)
 
-由于美国和欧盟对俄罗斯亿万富翁、政治家和其他普京总统的盟友实施一系列制裁，这次飞行引起了西方观察家的兴趣。 目前，乌克兰正在呼吁北约在乌克兰设立一个“禁飞区”，而北约一直不愿下令这么做，因为正如延斯·斯托尔滕贝格将军所明确表示的那样，如此做法，可能会将北约卷入第三次世界大战。
+总编/编辑: 飞虹
+审核: 飞虹
+校正/发稿：海阔天空1
 
-译者：这是一篇字里行间耐人寻味的报道，在这报道发表后不久，推特上路透社发了一个“乌克兰总统将会晤拜登“及“普示将会见以色列总理”的推。而拜登总统要求在乌美国人“立即”离开乌克兰，飞往华盛顿的私人飞机到底坐的是谁？这是一次为和平所做的最后努力？还是摊牌？
-
-原文链接：[https://www.zerohedge.com/geopolitical/kremlin-jet-headed-washington-fetch-russian-diplomats-expelled-un](https://www.zerohedge.com/geopolitical/kremlin-jet-headed-washington-fetch-russian-diplomats-expelled-un)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
