--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,40 +1,36 @@
 ---
-title: 意当局扣押俄罗斯亿万富翁7000万美元的游艇
+title: 俄罗斯封锁脸书推特
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2114337/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2114614/)
 
-翻译：Steven Hu
-![](https://assets.gnews.org/wp-content/uploads/2022/03/2-35.jpg)
-图片来源：《零对冲》
+作者：纽约香草山教育部 – Naughty(文行)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+3月4日，在不断镇压示威者和独立媒体的过程中，克里姆林宫封锁了对脸书和推特的访问。
 
-《零对冲》报道，又一艘属于俄罗斯商人的游艇被扣押，这次是在意大利。 据报道，意大利警方查获了位于意大利利古里亚省因佩里亚​​的 俄罗斯斯商人亚历克西.阿里克山德罗维茨.莫德肖夫（Alexey Alexandrovits Mordaschov ）的一艘价值 6500 万欧元（7100 万美元）的游艇“Lady M Yacht”。 并说这次扣押符合最近的欧盟制裁。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/9-12.jpg)
 
-莫德肖夫是俄罗斯亿万富翁商人，也是俄罗斯企业集团 Severstal 的主要股东和董事长，该集团在金属、能源和矿业公司中拥有权益。
+俄罗斯电信监管机构表示，封锁脸书的决定是针对该平台对俄罗斯媒体的所谓 “歧视 “做出的，并列举了自2020年10月以来的26个案例。
 
-在有关报道俄罗斯入侵乌克兰的新闻浪潮中，扣押属于受制裁的俄罗斯寡头的游艇已成为西方国家的一种娱乐。前中央情报局雇员发起了一场“夺取舰队”的运动，而另一位美国国会议员则试图让普通美国人参与其中。
+脸书母公司元宇宙的全球事务总裁尼克·克莱格在推特上发表声明说：很快，数以百万计的普通俄罗斯人将发现自己被切断了可靠的信息来源，被剥夺了与家人和朋友联系的日常方式，并被压制住不能说话。我们将继续尽一切努力恢复我们的服务，使其继续为人们提供安全和有保障的表达自己和组织行动的机会。
 
-更重要的是，拜登总统本周宣布了一个更积极的、针对俄罗斯寡头的“捕获盗国贼（KleptoCapture） 的特别工作组，主要是没他们的房地产和其他珍贵资产。
+链接：
 
-许多富有的俄罗斯人的游艇已经离开西方前往莫斯科，其中包括一艘通常被认为与普京有关的游艇。 但正如我们上周解释的那样，据称属于普京的大部分财富，包括游艇和几​​处豪宅（包括据报道耗资 10 亿美元的黑海度假村），已无可能同普京扯上任何关系，因为根据主要离岸律师事务所和银行泄露的财务记录，它们的所有权是通过中介机构来操纵的。
+- [Russia blocks Facebook and Twitter access](https://www.cbsnews.com/amp/news/russia-blocks-facebook-twitter/)
 
-当然，并非所有俄罗斯寡头都带着资产逃离欧洲，拜登政府本周早些时候明确表示，他们将“没收俄罗斯亿万富翁的游艇、豪华公寓和私人飞机”。
 
-我们的问题是：“拜登的目标是没收数十亿美元，俄罗斯寡头难道不会从海上逃到印度洋？”
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-21.jpg)
 
-答案似乎是“是”。 但并不是所有的俄罗斯寡头都成功了。 法国宣布扣押属于俄罗斯石油公司首席执行官伊戈尔谢钦（Igor Sechin)的超级游艇。 法国财政部长布鲁诺·勒梅尔（Bruno Le Maire）本周透露，此举是欧盟对俄罗斯持续制裁的一部分。
+总编/编辑: 飞虹
+审核: 飞虹
+校正/发稿：海阔天空1
 
-这艘游艇被称为 Amore Vero（真爱），它“在一夜之间”在地中海港口 La Ciotat 被没收”，彭博社周四上午报道。而布隆伯格写道，当这艘游艇被没收时，它正在“准备紧急出发”。
-
-勒梅尔本周在推特上表示：“感谢法国海关对与俄罗斯领导人关系密切的人实施欧盟制裁。”
-
-而另据报告，法国预算部长奥利弗·杜索普特澄清这艘游艇“被阻止离开”，但资产仍未被冻结。 最初打算在港口停留至四月。
-
-另外，一些最大的俄罗斯拥有的豪华游艇正在印度洋周围航行。
-
-拜登总统周二晚在国情咨文中警告称，美国和欧洲将“没收”俄罗斯亿万富翁的资产。他说：“今晚，我要对从这个暴力政权中建立数万亿美元的俄罗斯寡头和腐败政权说：‘够了！‘我们为了你的不义之财而来！”
-
-原文链接：[https://www.zerohedge.com/geopolitical/rosneft-ceos-yacht-seized-french-port-after-preparing-urgent-departure](https://www.zerohedge.com/geopolitical/rosneft-ceos-yacht-seized-french-port-after-preparing-urgent-departure)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
