--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,32 +1,43 @@
 ---
-title: 英情报：俄军视乌人口密集区为目标
+title: 一周疫情、疫苗信息汇总
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2114266/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2114611/)
 
-文 :林辉智
-发布 :2022年3月6日 4:07 PM
-采集：玫瑰新闻组
+作者：香草山医疗部 – Zion文恩，DC农场 – 火来，香草山 – 宁文静
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2022年2月22日至3月2日，除中共国外，全球新增中共病毒确诊患者1062万例，同比上周下降了14.84%，连续四周呈现下降趋势;  此外，本周新增确诊死亡病例58158例，同比上周大幅下降了13.87%，截至3月2日，除中共国外，全球累计接种了77.4亿剂中共病毒疫苗，同比2月22日的接种数据增长了1.57%。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/12-13.png)
+2月25日，新西兰高等法院大法官弗朗西斯·库克对于新西兰政府颁布的疫苗强制措施作出裁定，要求警方和国防部暂停执行因疫苗接种令解雇员工的举措。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3062.jpg)英国情报指出，俄罗斯军队目前已把目标锁定在乌克兰的人口密集区。（彭博社）
+美洲方面，2月27日，纽约市长亚当斯宣布，将于3月7日结束疫苗强制接种要求，以及室内强制戴口罩的规定。3月1日，根据medRxiv发布的数据，两剂疫苗对于5至11岁儿童几乎没有保护作用。3月2日，美国数千辆卡车组成的车队继续向首都华盛顿进发，抗议新冠疫苗的限制和强制规定，车队将于5日抵达华盛顿。
+
+在亚洲，香港疫情不容乐观，封城令悬而未决，引发香港市民恐慌性抢购商品。另外韩国的日新增确诊也持续上升，疫情严峻。
+
+正当全球聚焦俄乌战争，3月1日，FDA公布了第一批一万页辉瑞疫苗的审批文件。试用数据显示，疫苗导致的死亡率为病毒致死率的100倍。整整9页的“重点关注副作用”披露了大量已观察到的不良反应。其中8.5%的志愿者患上后天性免疫缺乏综合症，即“艾滋病”，4.7%患上血液淋巴疾病，3.3%患上心肌炎及相关心血管病，另外，疫苗导致孕期流产、死胎、新生儿死亡数据同样触目惊心。
+
+链接：
+
+- [‘Not demonstrably justified’: High Court upholds challenge to Police and NZDF vaccination mandates, terminations suspended](https://www.nzherald.co.nz/nz/not-demonstrably-justified-high-court-upholds-challenge-to-police-and-nzdf-vaccination-mandates-terminations-suspended/LMAUM7LZWV6FFQWAKKJFLKYLIE/)
+- [Multiple Truck Convoys Converge in Indiana for Large Rally en Route to DC](https://www.theepochtimes.com/multiple-truck-convoys-converge-in-indiana-for-large-rally-en-route-to-dc_4313151.html)
+- [New York City to lift vaccination mandate for businesses, events](https://www.nbcnews.com/news/us-news/new-york-city-lifts-vaccine-mandate-businesses-events-rcna17415)
+- [担心封城 香港出现抢购潮和离港潮](https://www.dw.com/zh/%E6%8B%85%E5%BF%83%E5%B0%81%E5%9F%8E-%E9%A6%99%E6%B8%AF%E5%87%BA%E7%8E%B0%E6%8A%A2%E8%B4%AD%E6%BD%AE%E5%92%8C%E7%A6%BB%E6%B8%AF%E6%BD%AE/a-60961704)
+- [Pfizer vaccine may offer little protection against infection in kids 5-11](https://www.nbcnews.com/health/health-news/pfizer-covid-vaccine-may-not-protect-infection-kids-rcna17967)
+- [Public Health and Medical Professionals for Transparency Documents](https://phmpt.org/)
 
 
-（早报讯）英国情报称，俄罗斯军队目前已把目标锁定在乌克兰的人口密集区，但他们面对的抵抗力量正在减缓其军事推进。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-21.jpg)
 
-路透社报道，英国军事情报部门在一份最新报告中说：“乌克兰抵抗的规模和力量继续让俄罗斯感到惊讶。”
+总编: 飞虹
+编辑: 宁文静
+校正/发稿：海阔天空1
 
-报告说，作为回应，俄罗斯将“以多个人口密集区作为目标，包括哈尔科夫（Kharkiv）、切尔尼戈夫（Chernihiv）和马里乌波尔（Mariupol）。”
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3013.png)
-
-英国军事情报部门说：“俄罗斯1999年曾在车臣，2016年在叙利亚使用过类似的战术，并同时使用了空中和地面的弹药。”
-
-俄罗斯一再否认该部队将平民地区作为军事目标。
-
-新闻链接：[英情报：俄军视乌人口密集区为目标](https://www.zaobao.com.sg/realtime/world/story20220306-1249505)
-
-审核校对：Barry Jack
-上传排版：V在途中
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
