--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,32 +1,53 @@
 ---
-title: 乌克兰救援3.5. 新中国联邦美国与欧洲救援团都已抵达现场并开展救援
+title: 比起Steve Wynn、Broidy、Higginbotham, PAG毛都不算
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2114245/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114575/)
 
-撰稿：DG
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture221.png)
-2022年3月5日，NFSC救援行动纽约团队抵达华沙。前线总指挥大卫在盖特上直播采访了一个别救的中国留学生和当地市长。
+Youtube视频链接：[https://youtu.be/UZFJyYAJMz4](https://youtu.be/UZFJyYAJMz4)
 
-2022年3月5日9:49PM（美东时间，乌克兰基辅时间6日早上4:49AM），NFSC救援行动电报群组里更新了大巴时间表。
+**郭文贵先生：**所以我说：“共产党是没睾丸的，那有什么睾丸呐。”我说：“这帮垃圾那有什么睾丸，都是吃伟哥的是吧。”我说在这个世界，他把“龙头”变成“龟头”，你想想TPG，PAG，单伟建，这种流氓行动。单伟建是王岐山的马仔，康点的哥们，到今天在西方的渗透，他对我们越攻击，他造的假文件越多，他未来他倒霉越大。
 
-3月5日 – 3月6日， 2班 X 50 座
-3月7日起2星期: 2班X50座，2班X59座，1班X58座，1班X56座，1班X50座2022年
+你们忘了吧，2016年，15年、16年、17年，比他牛叉的人是谁呀？Higginbotham美国建国以来最大的司法部腐败的案子，仅仅一个律师就七千多万美元，到了中共所谓驻华盛顿大使馆去勾兑，被后是谁？Steve Wynn。Steve Wynn不比你PAG大多了？Elliott Broidy要拿30亿美元搞我。孙力军、孟建柱、王岐山、康典、马云、“钥匙澜”老公——找班农去要把“钥匙澜”送给班农去。然后美国当时时任总统Donald Trump，“Miles Guo！Miles Guo！rape everybody，rape everybody。”——我强奸全世界所有人。
 
-3月5日前线总指挥大卫在盖特上直播介绍当地的情况，大卫说：
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture1-11.png)
-我们是来救人的，救人靠情报、资源，靠对当地环境的了解。这几天需要躲避交通拥堵和涌来的大量难民和不安全因素比如在局部边境已经发生了抢、盗这样的现象。还有就是已经开始出现对华人排斥的现象，比如有的留学生无法搭乘巴士、卡车、私家车，因为你是华人。他们本能的抗拒或反感。
+“噢，给我签这个字啊，Miles Guo rape everybody，rape everybody。”班农说：“谁？谁？谁谁？你再说一遍Miles Guo 他咋强奸所有人了？”
 
-另外通报一下，前些天在社交媒体上流传的那些诋毁、抹黑、恶意评价乌克兰这场战争和饱受灾难的居民的视频，国内这些小粉红们垃圾人，他们的视频在乌克兰大肆传播并被翻译成多种语言，又被转给乌克兰正在逃难的人，甚至乌克兰正在战斗的人，你想想这意味着什么？！所以现在乌克兰在迷茫失望之中，可能又多了一份可能潜在的待爆发的仇恨，这就是中共给华人洗脑以后这些脑残们在海外的恶意言行带来的灾难。
+你想想当时的画面，是吧？你想想当时博明，你想想当年司法部长Sessions，大早上起来的七点钟给美国总统做简报。结果川普拿过来：“哎，把那个给我签一下啊。”那个律师Kruse（音）超级好，白宫律师，说：“什么？你要签这个？你签了这个，你就完了，你就得离开白宫。这是犯罪，你没权力签这个。”
 
-我现在能感受到包括昨天七哥一再问我，“你有没有感到危险”，我说句心里话我担心，我从当地人的眼神里他们的绝望也可能成为仇恨，这是我们面临的情况。也是我们为什么来到这里，直播，也是我们新中国联邦为什么会把这辆大巴，用实力展示在乌克兰境内把60多人拉到这个波兰的火车站，没有实力没有之前的准备是不可能做到的，战友们！
+然后说：“哎别别，这是我们最重要的人，你怎么能签这个？你签了你就完了。”
 
-而且现在在乌克兰境内只有一个还能安全撤离的来这里的通道就是：
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Picture1-10.png)
-原文链接：[https://www.gettr.com/streaming/py8k3mecdc](https://www.gettr.com/streaming/py8k3mecdc)
+“是吗？”他说“你知道他是你马阿拉哥会员吗？”他说：“是吗？”——他都不知道。
 
-校对发布： Shifter
+“他就是那个郭文贵，Miles Guo。你要签的这个，强奸everybody的人就是Miles Guo。”
 
+Steve Wynn，Elliott Broidy，Elliott Broody老婆律师，Higginbotham、司法部副部长等，还有华尔街什么Blackstone。你去想想全人类多牛哇，PAG 算个鸟毛啊它算个。
 
+当时把七哥要被撂倒……你去想想当时，当时啊，当时给欧洲的人打电话，给中东的某国家打电话说:只你能把郭文贵给弄回来，一切交易可谈。
+
+编辑整理：Jacques；
+
+字幕文件制作：兵嫂；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]HJapanGalaxyII推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
