--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,35 +1,41 @@
 ---
-title: 拜登政府将对中共国商品关税展开审查
+title: 德国教练到盘古现场发现龙头变龟头没完工而且缺两睾丸
 ---
-`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2114186/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114557/)
 
-**撰稿：日本东京方舟农场 北极**
+Youtube视频链接：[https://youtu.be/CjLF-0DD09k](https://youtu.be/CjLF-0DD09k)
 
-美中第一阶段贸易协议期限已届，中共没有兑现其采购承诺，拜登政府是否祭出惩罚性关税，或展开新的贸易政策，受到外界关注。 图为美国加州长滩港集装箱运输。
+**郭文贵先生：**你要看到七哥过去七年来所向披靡，共产党上万次的警察，把龙头在奥运会前变成了龟头。德国那个教练说：“Miles，我真的到现场我认真看了，他说那有男性龟头，有没有睾丸呐？”把我笑晕了，我还真没想过这个问题。我说：“你得问习近平‘习太阳‘去，有没有睾丸？”白素贞你问问勺子星为什么没搞两个睾丸。（呵呵呵呵，嘉宾们都笑了）
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/拜登政府.png)（图片来自大纪元）
+我说这哥们太搞笑了，你想象力太强了。我说德国人你只知道潜水艇，哪出来睾丸呐。把我笑得快笑晕了。他说：“我就在这前面看着，真的就把这个龙头……..”他说“2008年的时候我来了，我就站在同样的位置”他说“这个世界全变了。冠状病毒、疫苗”他说“整个奥运村那块就像死气沉沉，没人”他说“那有人呐，除了军人就是军人。世界都是死静一片”
 
-据大纪元3月06日报道，美国即将对价值340亿美元的第一批中共国商品关税展开审查。
+他说：“但是你那“龙头”变成‘龟头’“他说“确实是龟头。”他说“包扎的龟头。”他还发现那龟头上头有一层没完，我都不知道，你们都没发现这个问题。他说：“没完啊，Miles，还有一层……那是拿那个粘上去的东西。”我说：“是吗？”就是工没完，它那个龟头包扎还没完呢。他说：“那个Miles，那个睾丸在哪呢？得弄两睾丸。”我说：“是呀，我说再弄两个有保护神。”这两睾丸都成了…..，上哪弄两睾丸去呀。文疯而动弄两睾丸去吧。
 
-根据《贸易法》第301条规定，进口商品关税在征收四年后到期，美国贸易代表办公室有权对其进行审查。审查需要在其可能结束前的60天内进行，第一批340亿美元的中国商品将在接下来的几个月内到期，即7月6日。
+编辑整理：Jacques；
 
-即使在俄罗斯入侵乌克兰导致大宗商品供应收紧之后，拜登政府没有发出取消关税的计划的信号， 通胀率目前已超过7%，从能源到小麦的价格都在飙升。
+字幕文件制作：兵嫂；
 
-拜登总统保留了前任川普总统对中欧工国商品征收关税的政策。川普政府期间先后征收了4次关税：2018年7月份以来，美国先是对340亿美元商品征收25%关税，随后对160亿美元商品征收25%关税，然后扩大到对2000亿美元关税征收10%关税，到2019年5月再将2000亿美元商品的关税提升到25%。
+视频制作及上传：Cindy；
 
-2020年初，特朗普和中国国家主席习近平达成协议，签署了第一阶段协议。中国同意增加对美国商品和农产品的购买，即比贸易战开始前多购买2000亿美元。
+G-News发布：小满；
 
-但中国未能实现这些目标。 追踪中国采购情况的彼得森国际经济研究所高级研究员乍得·鲍恩（Chad Bown）表示，中国有望只采购其承诺购买的商品的60%。
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-拜登几个月前表示，这就是他保留关税的原因。
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-参考链接：
-[https://www.epochtimes.com/b5/22/3/5/n13624781.htm](https://www.epochtimes.com/b5/22/3/5/n13624781.htm)
-[https://www.bbc.com/zhongwen/simp/business-48770168](https://www.bbc.com/zhongwen/simp/business-48770168)
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-素材采编：北极
-编辑：老孙
-发布：Linda
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
