--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,19 +1,11 @@
 ---
-title: 乌克兰救援0304：Nicole战友辞掉美国财政部的工作参加乌克兰特别大救援
+title: 新中国联邦乌克兰救援团队采访波兰热舒夫市长
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2114157/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2114431/)
 
-撰稿：DG
-![](https://assets.gnews.org/wp-content/uploads/2022/03/P的多icture1.png)图片来源：GETTR
-美东3月4日晚九点多，新中国联邦赴乌克兰大救援美国救援团成员Nicole谈到，她辞去她在美国财政部的工作奔赴救援前线。她谈到出发当天在机场的外国人知道他们要奔赴国际救援前线时，看他们的眼光大不一样。
+03/05/2022 新中国联邦乌克兰救援团队采访波兰热舒夫市长。市长先生不仅非常感谢新中国联邦的救援行动，并且为我们的工作提供了便利和支持。
 
-Nicole谈到，当时申请请假去参加救援，两天多的时间请假信在内部一层一层上报。有各种各样的原因，最后被告知不能批准假期。然后她马上回了Email说，不管财政部批不批都要走，而且现在就是辞职信。
-
-Nicole还谈到在机场告别的时候，我们是一群中国人在奔赴国际救援的前线，他们（在场的外国人）看我们的眼光就不一样。可能在西方社会从来没有见到过，在国际人道救援中这样一群中国人出现在飞机场、出现在商务舱。所以他们看我们的眼光，我来美国二十多年，我没有经历过像这样西方人看我们的。我觉得作为中国人特别骄傲。
-
-来源链接：[https://www.gettr.com/post/py8k3mecdc](https://www.gettr.com/post/py8k3mecdc)
-
-校对发布：Shifter
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
