--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,18 +1,35 @@
 ---
-title: 泽连斯基现象
+title: 莫里森警告中共国在乌克兰危机中“不要汲取错的教训”
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2114570/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/2114746/)
 
-撰稿—爱战神
-校对/上传—无明逆流
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-2022年3月2日文贵先生在大直播首次提到，乌克兰总统“泽连斯基现象”。什么叫“泽连斯基”现象？文贵先生高度赞扬了泽连斯基，称他由平民总统，转变成一个伟大的总统，没有政客们的一副嘴脸，耍奸阴毒，属于政治小白，清廉干净，没有利益勾兑，是个穷人。他能够当上总统，完全是乌克兰人民看透了政客一贯的的虚伪贪婪，而选了一个擅长幽默的演员做了总统。事实证明，乌克兰人民没有选错，俄入侵一开始就无良媒体造谣，说泽连斯基携全家逃了，扔下乌克兰人民跑路了。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/W9-PM.jpeg)图片来源：网络
-文贵先生说：面对强大的俄罗斯入侵，泽连斯基总统呼吁全国人民英勇抵抗，召唤在海外的所有乌克兰人帮助自己的祖国。没有抱怨、没有谩骂、没有中共的动不动就谴责西方国家。而是博取世界同情，录制了大量视频，战争惨烈的场面、小女孩们哭泣的歌唱、人民流离失所……效果非常好，爱好和平的国家和个人纷纷支持！世界几乎一边倒的选择站在正义的乌克兰这边，大量的先进武器源源不断地送来，个人组成志愿军奔赴乌克兰战场……
+翻译/编辑：文泓
 
-由此，文贵先生说：谁都可以当总统，只要有能力，不分所谓的贵贱、地位。世界需要没有政治经验，小白出身的人当国家的精神领袖，这就是“泽连斯基”现象！
-文贵先生再次宣告世人：我不参政，我不想当总统，但是我要用在新中国联邦的影响力，推动中国人一人一票，最终实现中国民主自由，这是我一生的使命！
-但愿“泽连斯基”现象不久出现在我们中国，出现在全世界！越来越多的平民精神领袖管理国家，世界和谐相处，没有战争，只有和平！
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/8-20.png)图片来源：TFIGlobal & 雅典娜设计组
+
+
+澳洲总理斯科特·莫里森警告，中共国不要从俄罗斯入侵乌克兰中“汲取错误的教训”，并表示如果中共国违反国际秩序，将面临与克里姆林宫类似的后果。
+
+在3月4日四方会谈结束以后，莫里森总理向北京发出了警告，并说如果它像俄罗斯那样“违反国际秩序”，将会付出“沉重的代价”。
+
+“俄罗斯正在付出高昂的代价。他们的卢布（崩溃），银行利率正在迅速上升；他们的中央银行被切断（SWIFT），以及对个人的定向制裁……**这将向其他任何人，向任何其他专制政权发出一个非常明确的信息，我们知道在我们自己的地区有一些这样的政权，**”他告诉媒体。
+
+“**他们不应该从其中汲取错误的教训。如果你试图违反国际秩序，基于规则的国际秩序****，那么****在（国家）声誉和经济方面将有沉重的交易成本**。”
+
+当其他国家在俄罗斯入侵乌克兰期间对其实施制裁，而中共国却在战争时期放松了对俄罗斯的贸易限制，莫里森先生抨击中共国的这种行为。
+
+参考链接：[警告中国在乌克兰危机中“不要汲取错的教训”](https://cn.theaustralian.com.au/2022/03/04/64221/)
+
+*发布：tianzhihuan*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
