--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,48 +1,26 @@
 ---
-title: 灭共产党都不在话下的七哥若被太平联盟撂倒就成了笑话
+title: 小粉红，充其量独裁统治的一工具而已
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2114536/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/2114719/)
 
-Youtube视频链接：[https://youtu.be/911pqOnpFRs](https://youtu.be/911pqOnpFRs)
+撰稿：妇女之友-电流声
+![](https://assets.gnews.org/wp-content/uploads/2022/03/602.png)图片来自网络
+似乎在2008年左右，中共国网站已经出现“小粉红”群体，同一年，中共国相继发生汶川大地震和北京举办奥运会两件大事，一悲一喜都让中共国人的爱国热情突然高涨。抗震救灾的团结一心和北京奥运所展现的中共国博大精深的文化，感动了中共国，也影响了世界。此后，中共国崛起成为世界讨论的热点，中共国人特别是年轻人，也前所未有地感觉到党国的强大。
 
-**郭文贵先生：**这就为什么共产党告七哥的76个官司，10几个其它所谓刑事的这种诉告，全部是想改变美国游戏规则的，和改变美国赖以生存的基石法律的。** **
+这群所谓崛起的一代小粉红没有传统左派那般自诩为“红”，没有太多毛贼时代的历史认知，也不会以追求社会公平平等为己任，甚至连“党”和“国家”不是一个概念都分不清，盲目认同自己的党国（或政府）就是国家，以维护自己的党国为荣。他们有时对批评声音或不同意见不能容忍，甚至采取一些言论或行动上的反击。尤其在网络上活跃的小粉红们更是在任何与国家（党国）民族有关的问题上，为中共国声辩，展示出强大的舆论影响力。
 
-PAG所有官司的，我是所谓的个人担保曾经，你不找盘古要钱去，你找我干什么？盘古又不是不还你钱。它不履行合约不还你钱，你再找我这个担保人；而且最后还完你，你承认还完钱了，你给我篡改了一个所谓的个人担保，就不让我说一句话，就要判我输1.3亿还是1.4亿美元。
+比如前些年因为中日在钓鱼岛的争议，中小粉红们在进行抗议的过程中出现极端的打砸在华的日系车、日本商店等极端行为，甚至出现中国车主因阻止打砸而头骨被打穿的恶性事件。至于以“帝吧出征”的方式，向墙外某些社交网络进行灌水洗版的抵制行为也已司空见惯。最近俄乌战争，对营救滞留在乌克兰的华人尤其留学生，小粉红们又表现出爱“中共国大使馆”的高涨情绪，非中共国营救不走……殊不知，在不长眼的硝烟炮火下，你将付出不可挽回的生命代价。
 
-然后这个船是不是我的，你不能说我控制就是我的。谁买的船？谁是船主？它第一天叫Lay May，从来没叫Gentlemen Guo，Miles Guo，是吧？你就说是我的，你又罚我1.3亿，然后给我5天时间，你必须交钱，不交钱我给你扔监狱去。
+对于中共国的小粉红群体在不少事件中表现出的极端是有历史相似度的。拿破仑时期的法国、纳粹时期的德国、二战时期的日本，都曾因本国的民族主义极度膨胀，最后走向了对外侵略扩张的毁灭道路。走向极端的民粹主义，出现极度的傲慢，就有可能形成新的偏见，甚至重蹈历史的覆辙，中国在历史上因过度的民族主义而给国家和人民造成的灾难还少么。
 
-然后还不让我使用陪审团。我有权利使用陪审团啊和法官判决。我为啥不能使用陪审团？然后对方的律师就威胁我们一系列，我现在不能讲，案子在这其中。你们会想象不到发生的事情。你会想象不到这个法官的判决里面是对方PAG的律师写出来的。
+中共国的这一代成长在所谓崛起背景下的年轻小粉红们，真的令人扼腕。可悲的是，连“党”和“国家“都傻傻分不清楚的小粉红们，你们盲目的爱”党国“高涨情绪，不是你的热血表达，充其量只是独裁统治的宣传工具，结果就是独裁的牺牲品。
 
-就是PAG单伟建在西方，你想想外国人就没想明白为什么文化大革命的单伟建，穿着军装的单伟建能被共产党派到西方来，全家在美国出生，儿子一买房子现金几千万钱哪来的？从TPG到PAG，这哥们就玩上千亿美元啊，而且都要投到中国去。多少养老金被他给欺骗？
+参考链接：
 
-你记住啊，七哥要不把单伟建和太平联盟这个事情搞明白，那就不叫郭文贵。我连共产党都要灭，我连你单伟建的事搞不清楚，你觉得那还叫郭文贵吗？战友们，如果你们跟随的七哥，要灭共的七哥能被太平联盟给摞倒的话，你觉得你们在这块看我直播，你们不就成了最愚蠢的傻子吗。你要扫平在森林里的所有的恶魔，结果一个苍蝇就把你潦倒了，你糊弄谁呢？是吧？
+[**【小粉紅崛起】為何蘇聯造就「崇美派」　中國卻崛起「小粉紅」**](https://www.hk01.com/%E5%8D%B3%E6%99%82%E4%B8%AD%E5%9C%8B/393285/%E7%82%BA%E4%BD%95%E8%98%87%E8%81%AF%E9%80%A0%E5%B0%B1%E4%BA%86-%E5%B4%87%E7%BE%8E%E6%B4%BE-%E4%B8%AD%E5%9C%8B%E5%8D%BB%E5%B4%9B%E8%B5%B7%E4%BA%86-%E5%B0%8F%E7%B2%89%E7%B4%85)
 
-编辑整理：Jacques；
-
-字幕文件制作：兵嫂；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*编辑&发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
