--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,26 +1,12 @@
 ---
-title: 澳洲国防部长彼得·达顿警告俄罗斯不要在乌克兰使用化学武器
+title: 议员罗·卡纳：根据1979年法案，美国有义务保卫台湾
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2114513/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2114697/)
 
-By：喜国公民
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-510.png)图片来自网络
-由于俄罗斯对乌克兰的进攻遭遇到顽强的抵抗，其快速占领乌克兰的计划受阻，澳洲国防部长彼得·达顿警告说，普京可能对乌克兰使用化学武器，并表示如果对乌克兰领空设定禁飞区，可能会引发核冲突。
+03/01/2022 国会议员罗·卡纳：我们必须非常坚定和非常清楚地表明我们将保卫台湾，根据1979年的法案，我们有义务保卫台湾。中共侵台结果会是灾难性的。
 
-乌克兰全国各地，特别是在基辅和哈尔科夫，乌克兰军队做出了出色的抵抗。但是考虑到俄罗斯强大的军力，以及普京使用化学武器的倾向，达顿先生对乌克兰的战况深表担忧，感觉俄罗斯最终夺取乌克兰可能不可避免。
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
-他说，鉴于俄罗斯的入侵行动未能按计划进行，使用化学武器已被列为普京的一个潜在选项。
-
-达顿先生呼吁中共国对普京施加压力，他认为现在只有中共国能够改变普京入侵乌克兰的现状。
-
-美国驻联合国大使琳达·格林菲尔德也对俄罗斯可能在乌克兰使用生化武器感到担忧。
-
-乌克兰请求禁止所有未经授权的飞机在乌克兰上空飞行，即设立禁飞区。然而，普京警告说，如果设立禁飞区，不仅对欧洲，对整个世界都将产生巨大的灾难性后果。
-
-普京说，任何设立禁飞区的行动都将被俄罗斯视为该国参与了乌克兰的武装冲突。
-
-消息来源：[Defence Minister Peter Dutton says Ukraine no-fly zone could lead to ‘nuclear conflict’, warns of Russia’s chemical weapon arsenal](https://www.skynews.com.au/world-news/defence-minister-peter-dutton-says-ukraine-nofly-zone-could-lead-to-nuclear-conflict-warns-of-russias-chemical-weapon-arsenal/news-story/358194d4e7282f63cf577f209deeaf87)
-![](https://assets.gnews.org/wp-content/uploads/2022/03/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
